fixes issue 986 fixes i#607 part D
Distinguish operators without overload type info, for i#882, for
Linux/Mingw where drsyms doesn't support type info as well as
for Windows system libs like msvcp*.dll (== i#607 part D).

Strategy:
1) Ask for mangled name for Linux/Mingw and compare to known
   mangled types.  If that fails, go to 2.  For PDB, go to 2.
2) Decode the function.  If straight-line, assume placement.
   Give up on nothrow: only matters on OOM anyway.

If we don't have syms at all (and thus don't see the operators) we're
probably in fine shape for placement or nothrow as both are inlined
for both g++ and MSVS with nothrow calling out to libc regular.

Added an ignore_exit_code property to the test suite to use for
replace_operators as -replace_malloc calls dr_exit_process(1) in lieu of
throwing an exception.

Added new tests replace_operators and replace_operatorsMDd (for i#607 part D).
Tested manually on operators.cpp built with mingw.

SVN-Revision: 1015

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -253,7 +253,8 @@ set(cmd_script -P "./runtest.cmake")
 # whether to run the front-end with -results after the app is run.
 # The resbase arg support specifying a different .res and .out name
 # to use.
-function(newtest_nobuild test exe test_ops drmem_ops dr_ops postprocess resbase)
+function(newtest_nobuild_ex test exe test_ops drmem_ops dr_ops postprocess resbase
+    ignore_exit_code)
   if (${exe} MATCHES ".exe$")
     set(exepath ${exe})
   else ()
@@ -337,9 +338,15 @@ function(newtest_nobuild test exe test_ops drmem_ops dr_ops postprocess resbase)
     -D DRMEMORY_CTEST_SRC_DIR:STRING=${CMAKE_CURRENT_SOURCE_DIR}
     -D DRMEMORY_CTEST_DR_DIR:STRING=${DynamoRIO_DIR}
     -D CMAKE_SYSTEM_VERSION:STRING=${CMAKE_SYSTEM_VERSION}
+    -D ignore_exit_code:BOOL=${ignore_exit_code}
     # runtest.cmake will add the -profdir arg
     -D postcmd:STRING=${postcmd}
     ${cmd_script})
+endfunction(newtest_nobuild_ex)
+
+function(newtest_nobuild test exe test_ops drmem_ops dr_ops postprocess resbase)
+  newtest_nobuild_ex(${test} ${exe} "${test_ops}" "${drmem_ops}" "${dr_ops}"
+    ${postprocess} "${resbase}" OFF)
 endfunction(newtest_nobuild)
 
 function(newtest_ex test source test_ops drmem_ops dr_ops postprocess resbase)
@@ -462,6 +469,9 @@ if (TOOL_DR_MEMORY)
   # test malloc replacement (additional tests are below)
   newtest_nobuild(replace_malloc malloc "" "-replace_malloc" "" OFF "malloc")
   newtest_nobuild(replace_cs2bug cs2bug "" "-replace_malloc" "" OFF "cs2bug")
+  newtest_nobuild_ex(replace_operators operators "" "-replace_malloc" "" OFF "operators"
+    # ignore exit code (b/c -replace_malloc calls dr_exit_process(1) in lieu of exception)
+    ON)
 
   # shared by all suppress tests
   tobuild(suppress suppress.c)
@@ -546,6 +556,13 @@ if (TOOL_DR_MEMORY)
       newtest_custbuild(cs2bugMD cs2bug.cpp "/MD" cs2bug)
       newtest_custbuild(cs2bugMDd cs2bug.cpp "/MDd /DSKIP_MISMATCH_DTR" cs2bugMTd)
       newtest_nobuild(replace_cs2bugMTd cs2bugMTd "" "-replace_malloc" "" OFF "cs2bugMTd")
+
+      # Test i#607 part D
+      newtest_custbuild(operatorsMDd operators.cpp "/MDd" operators)
+      newtest_nobuild_ex(replace_operatorsMDd operatorsMDd ""
+        # FIXME i#1004: -skip_msvc_importers breaks -replace_malloc so disable for now
+        "-replace_malloc;-no_skip_msvc_importers"
+        "" OFF "operators" ON)
     endif (USE_DRSYMS)
 
     if (GCC)
