fixes issue 1011 + add app suite to pre-commit test suite
SVN-Revision: 1017

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -646,6 +646,7 @@ endif (TOOL_DR_MEMORY AND WIN32)
 newtest(leakcycle leakcycle.cpp)
 
 add_subdirectory(app_suite)
+newtest_nobuild(app_suite app_suite_tests "" "" "" OFF "")
 
 else (NOT X64)
   # pattern mode testing.
