Re-organize and improve documentation.
I'm relying on navbar on the side for navigation, making it possible to
have more separate pages with navigation performed on the side.

Moved Installing, Preparing, Running, Error Types, Error Reports, and Light
Mode to their own top-level pages.  Most of their sub-pages are now also on
separate pages.

Gave up on having the full path to the frontend in each example via aliases
b/c aliases aren't expanded in verbatim or code sections and those look
much better: plus, the build# was wrong.  So I switched to verbatim for all
the example command lines, giving just one platform, with both at the top
(installation, etc. already cover both anyway, and the online docs should
be general even if those packaged could be specialized).

Split content out of using.dox into errors.dox, reports.dox, and light.dox
for easier ordering without the \subpage command.

See the results at http://drmemory.org/docs/

SVN-Revision: 1048

--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -103,8 +103,11 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = .
-FILE_PATTERNS          = *.dox
+# We do not use *.dox so we can control the order and still have
+# top-level pages:
+INPUT                  = using.dox \
+                         options-docs.dox release.dox main.dox
+FILE_PATTERNS          = 
 RECURSIVE              = NO
 EXCLUDE                = 
 EXCLUDE_SYMLINKS       = NO
