--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -606,10 +606,10 @@ if (TOOL_DR_MEMORY)
   set_property(TEST pcache-use APPEND PROPERTY DEPENDS pcache)
   newtest_ex(track_origins track_origins.c "" "-light;-track_origins_unaddr" "" OFF "")
   # pattern mode testing.
-  newtest_nobuild(free.pattern free "" "-pattern;0xf1fd;-no_count_leaks" "" OFF "addronly")
-  newtest_nobuild(malloc.pattern malloc "" "-pattern;0xf1fd;-no_count_leaks" "" OFF "")
+  newtest_nobuild(free.pattern free "" "-unaddr_only" "" OFF "addronly")
+  newtest_nobuild(malloc.pattern malloc "" "-unaddr_only" "" OFF "")
   newtest_nobuild(registers.pattern registers "" "-pattern;0xf1fd" "" OFF "addronly-reg")
-  newtest_nobuild(track_origins.pattern track_origins "" "-pattern;0xf1fd;-no_count_leaks;-track_origins_unaddr"
+  newtest_nobuild(track_origins.pattern track_origins "" "-unaddr_only;-track_origins_unaddr"
     "" OFF "track_origins")
 
 else (TOOL_DR_MEMORY)
@@ -645,8 +645,8 @@ newtest_nobuild(app_suite app_suite_tests "" "" "" OFF "")
 
 else (NOT X64)
   # pattern mode testing.
-  newtest_ex(free.pattern free.c "" "-light" "" OFF "addronly")
-  newtest_ex(malloc.pattern malloc.c "" "-light" "" OFF "")
-  newtest_ex(track_origins.pattern track_origins.c "" "-pattern;0xf1fd;-no_count_leaks;-track_origins_unaddr"
+  newtest_ex(free.pattern free.c "" "-unaddr_only" "" OFF "addronly")
+  newtest_ex(malloc.pattern malloc.c "" "-unaddr_only" "" OFF "")
+  newtest_ex(track_origins.pattern track_origins.c "" "-unaddr_only;-track_origins_unaddr"
     "" OFF "track_origins")
 endif (NOT X64)
